--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-body{ background-image:url("bg.jpg");}
+body{ 	
+	background-image:url("bg.jpg");
+	background-repeat: no-repeat;
+	background-size: 2000px;
+	font-family: "Arial";
+	font-size:30px;}
+a{	
+	
+	text-decoration: none;
+	color: cyan;
+	font-weight:bold;}
 
 .menu {	
 	text-align:center; 
